@@ -26,6 +26,8 @@ Revision history for Test-BrewBuild
         - added all config file directives to the config file POD (closes #227)
         - to allow for 4x2 RPi LCDs, we've extended the environment variable
           (closes #231)
+        - added Constant.pm to eliminate hard-coded magic numbers (and other
+          info) (closes #222)
 
 2.19    2017-08-05
         - added 'status' command to bbtester, prints to STDOUT whether a tester
